# RiveSharp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  README.md
.github/workflows/: build.yml  release.yml
docs/: build-and-release-plan.md  build-guides.md  release-notes-template.md  renderer-interop-plan.md
docs/samples/: avalonia-null-backend.md  null-backend-cpu.md  render-validation.md
dotnet/RiveRenderer/: AdapterInfo.cs  Enums.cs  Handles.cs  NativeHandles.cs  NativeLibraryLoader.cs  RenderBuffer.cs  RenderFont.cs  RenderImage.cs  RenderPaint.cs  RenderPath.cs  RenderShader.cs  RendererCapabilities.cs  RendererContext.cs  RendererDevice.cs  RendererException.cs  RendererSurface.cs  RendererVulkanDeviceOptions.cs  RiveRenderer.csproj  Structs.cs  TextStyle.cs
dotnet/RiveRenderer.Benchmarks/: Program.cs  RiveRenderer.Benchmarks.csproj
dotnet/RiveRenderer.Tests/: InteropRegressionTests.cs  RendererBehaviorTests.cs  RiveRenderer.Tests.csproj  SmokeTests.cs  StructLayoutTests.cs
dotnet/RiveRenderer.Tests/TestUtilities/: NativeTestHelper.cs  RequiresNativeLibraryFactAttribute.cs
dotnet/RiveRenderer/Native/: NativeMethods.Buffer.cs  NativeMethods.Context.cs  NativeMethods.Device.cs  NativeMethods.Font.cs  NativeMethods.General.cs  NativeMethods.Image.cs  NativeMethods.Paint.cs  NativeMethods.Path.cs  NativeMethods.Renderer.cs  NativeMethods.Shader.cs  NativeMethods.Text.cs  NativeMethods.cs
dotnet/RiveRenderer/Properties/: AssemblyInfo.cs
renderer_ffi/: CMakeLists.txt
renderer_ffi/build-release/: CMakeCache.txt  Makefile  cmake_install.cmake
renderer_ffi/include/: rive_renderer_ffi.h
renderer_ffi/src/: rive_renderer_ffi.cpp
samples/Avalonia/RiveRenderer.AvaloniaSample/: App.axaml  App.axaml.cs  Program.cs  RiveRenderer.AvaloniaSample.csproj  ViewLocator.cs  app.manifest
samples/Avalonia/RiveRenderer.AvaloniaSample/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
samples/Avalonia/RiveRenderer.AvaloniaSample/Views/: MainWindow.axaml  MainWindow.axaml.cs
samples/Validation/RiveRenderer.RenderValidation/: Program.cs  RiveRenderer.RenderValidation.csproj
scripts/: build-linux.sh  build-macos.sh  build-managed.sh  build-wasm.sh  build-windows.ps1  build.ps1  build.sh  check-clang-format.sh  dotnet-format-verify.sh  run-clang-tidy.sh  validate-render.sh  validate-toolchains.ps1  validate-toolchains.sh
